# QT_test

./: CMakeLists.txt
forms/: untitled.ui
headlines/: mainwindow.h
sources/: main.cpp  mainwindow.cpp
